# hexaplex-backbone-fingerprint

./: .gitignore  AGENTS.md  MANUSCRIPT_CLAIM_MAP.md  PUBLICATION_TRACK.md  README.md  REPRODUCIBILITY.md  pyproject.toml
docs/: codex_prompt_template.md  current_research_checkpoint.md
legacy/: README.md  peptide_box_missing_onedrive_files.txt
scripts/: analyze_backbone_fingerprint.py  analyze_backbone_pair_family_cd.py  analyze_backbone_twist_coupling.py  analyze_best_clean_model_register_interfaces.py  analyze_candidate_hbond_plausibility.py  analyze_cd_candidate_spatial_register.py  analyze_cd_candidates_by_torsion_state.py  analyze_class_separated_peptide_geometry.py  analyze_emory_s1_02_fiber_orientation_fingerprint.py  analyze_global_chain_assembly_feasibility.py  analyze_ideal_hexaflex_addback_cd.py  analyze_ideal_hexaflex_atom_class_cd.py  analyze_repeated_phi_psi_intensity_sensitivity.py  analyze_threefold_backbone_symmetry.py  analyze_twist_tightening_filters.py  analyze_xyz_distance_enrichment.py  audit_axial_only_extension_variant_geometry.py  audit_backbone_torsion_repeat.py  audit_candidate_pdb_twist_range.py  audit_constrained_phi_psi_candidate_geometry.py  audit_coupled_cyp_glu_glu_mep_variant_geometry.py  audit_emory_s1_02_fiber_xray_images.py  audit_fine_axial_profile_variant_geometry.py  audit_global_deformation_variant_geometry.py  audit_ideal_hexaflex_register_mapping.py  audit_manuscript_pipeline_coverage.py  audit_parameterized_rise_variant_geometry.py  audit_parent_axial_layers.py  audit_pnab_parallel_antiparallel_models.py  (+70 more)
(+1912 files in other folders)
